reorder prior to merge